add_executable(p1618A p1618A.cpp)
add_executable(p1618C p1618C.cpp)
add_executable(p1618D p1618D.cpp)
add_executable(p1618E p1618E.cpp)
add_executable(p1618F p1618F.cpp)
add_executable(p1617A p1617A.cpp)
add_executable(p1617B p1617B.cpp)
add_executable(p1617C p1617C.cpp)
add_executable(p1638A p1638A.cpp)
add_executable(p1638B p1638B.cpp)
add_executable(p1638C p1638C.cpp)
add_executable(p1647A p1647A.cpp)