add_executable(1331 1331.cpp)
target_link_libraries(1331 fmt)
add_executable(593 593.cpp)
target_link_libraries(593 fmt)
add_executable(640 640.cpp)
target_link_libraries(640 fmt)
add_executable(1417 1417.cpp)
target_link_libraries(1417 fmt)
add_executable(1282 1282.cpp)
target_link_libraries(1282 fmt)
add_executable(1422 1422.cpp)
add_executable(2369 2369.cpp)
add_executable(2368 2368.cpp)
add_executable(2642 2642.cpp)
add_executable(301 301.删除无效的括号.cpp)
